peer review 90% done

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -315,7 +315,7 @@
 
 	\subsection{Strengths}
 		\begin{itemize}
-		\item \textbf{Wide Variety of Variables} The investment strategy looks at all variables provided in the COMAP College Score Card data set. This approach provides a large number of factors to assess an institution's potential for investment rather then the usual ones used by different education foundations. 
+			\item \textbf{Wide Variety of Variables} The investment strategy looks at all variables provided in the COMAP College Score Card data set. This approach provides a large number of factors to assess an institution's potential for investment rather then the usual ones used by different education foundations. 
 		\end{itemize}
 
 	\subsection{Weaknesses}
@@ -337,15 +337,15 @@
 
 \section{Conclusions}
 
-	After running our model on the real data, finding the top ranking universities and maximizing the investment of our donations to society. We found the top ranking universities to invest in, as presented in figure 2, and the top ranking universities that are better at taking individuals out of poverty as seen in figures (a),(b), and (c).\\
-	\\
-	We note that we treated each university as having equal footing in our investment strategy. We saw that this did not matter	as universities with smaller years-to-graduation would still provide a return within 5 years, and each return is only realized after 10 years of graduation.\\
-	\\	
-	Our sensitivity analysis on the model, found that it did well with any size of data input after being filtered by the amount of schools that it is allowed to look at. Since the ROI's were relatively close to each other it affirmed our model's results.\\
-	\\
-	However, we do believe that applying each of the ideas outlined in the extensions section of this report would improve the results of the model. Thereby providing the correct schools with the right amount of funds.\\
-	\\
-	Lastly, we would like to point out that while we measured schools as institutions that battle poverty, many may disagree on this view point. If one were to use SAT scores or ACT scores as the variable to determine the ranking of the university, they would still be able to make use of our model, a simple tweaking of the assumption would be required.
+	\ \ After running our model on the real data, finding the top ranking universities and maximizing the investment of our donations to society. We found the top ranking universities to invest in, as presented in figure 2, and the top ranking universities that are better at taking individuals out of poverty as seen in figures (a),(b), and (c).\\
+
+	\ \ We note that we treated each university as having equal footing in our investment strategy. We saw that this did not matter	as universities with smaller years-to-graduation would still provide a return within 5 years, and each return is only realized after 10 years of graduation.\\
+	
+	\ \ Our sensitivity analysis on the model, found that it did well with any size of data input after being filtered by the amount of schools that it is allowed to look at. Since the ROI's were relatively close to each other it affirmed our model's results.\\
+	
+	\ \ However, we do believe that applying each of the ideas outlined in the extensions section of this report would improve the results of the model. Thereby providing the correct schools with the right amount of funds.\\
+	
+	\ \ Lastly, we would like to point out that while we measured schools as institutions that battle poverty, many may disagree on this view point. If one were to use SAT scores or ACT scores as the variable to determine the ranking of the university, they would still be able to make use of our model, a simple tweaking of the assumption would be required.
 \clearpage
 
 \section{Letter to Mr. Alpha Chiang}
