last-minute edits

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -60,7 +60,7 @@ The first section outlines determining bench mark points and comparing the rest 
 		\item \textbf{Attainment of higher education improves poverty rates} According to the US Census Bureau, individuals with an advance degree earn on average \$72,824 per year which is significantly higher then individuals with a high school degree at \$45,400.\cite{dis} Generally, attending post-secondary education lifts individuals above the poverty-line. 
 
 	\end{itemize}
-	
+	\newpage
 	\subsection{Summary of our Approach}
 		\begin{itemize}
 		\item Create a benchmark setting: top 10 schools for each degree type school, that we consider to have good performance. Each school represent a class.  
@@ -247,13 +247,8 @@ The first section outlines determining bench mark points and comparing the rest 
 			\end{itemize}
 			\ \ We did make use of [1], and [3], for cleaning and producing other variables (such as the PES rank), however we did not run the kNN algorithm on them.
 
-<<<<<<< HEAD
 		\subsubsection{Selection of Variables from Given Data Sets}
 			Since many of the variables provided by scorecard, overlapped with the ones from IPEDS, we only withdrew the following variables:
-=======
-		\subsubsection{IPEDS Variables}
-			\ \ Since many of the variables provided by scorecard, overlapped with the ones from IPEDS, we only withdrew the following variables:
->>>>>>> 7aaef66ef6db70fa7702596e037c20396930e9b0
 			\begin{itemize}
 				\item \textbf{Number of students}, which we used for computation of kNN and for the maximization algorithm.
 				\item \textbf{Average Tuition of Low Income Students}, which we used mainly for the maximization.
@@ -334,7 +329,7 @@ The first section outlines determining bench mark points and comparing the rest 
 
 		\item \textbf{Determine the true poverty rate by adjusting for major type} Expanding on the idea above about partitioning into majors, we can refine the adjusted poverty rates. Particular institutions appeal more to lower-income individuals and conversely some universities have predominantly middle-income and above student-bodies. \cite{Carnevale}.
 	\end{itemize}
-
+\newpage
 \section{Conclusions}
 
 	\ \ After running our model on the real data, finding the top ranking universities and maximizing the investment of our donations to society. We found the top ranking universities to invest in, as presented in figure 2, and the top ranking universities that are better at taking individuals out of poverty as seen in figures (a),(b), and (c).\\
